[tool.poetry]
name = "py_iot"
version = "0.1.0"
description = ""
authors = ["Paraizo <felipeparaizo@gmail.com>"]

[tool.poetry.scripts]
local_iot = "py_iot.local:main"
cloud_iot = "py_iot.cloud:start"

[tool.poetry.dependencies]
python = "^3.10"
tinytuya = "^1.6.2"
fire = "^0.4.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
isort = "^5.10.1"
autoflake = "^1.4"
pytest-cov = "^3.0.0"
blue = "^0.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.blue]
line-length = 120
target-version = ["py39"]
exclude = "(/migrations|/devtools|/venv|/.venv)"
